; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/lufa/extr_outputselect.c_auto_detect_output.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/lufa/extr_outputselect.c_auto_detect_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_DeviceState = common dso_local global i64 0, align 8
@DEVICE_STATE_Configured = common dso_local global i64 0, align 8
@OUTPUT_USB = common dso_local global i32 0, align 4
@OUTPUT_NONE = common dso_local global i32 0, align 4
@OUTPUT_BLUETOOTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @auto_detect_output() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @USB_DeviceState, align 8
  %3 = load i64, i64* @DEVICE_STATE_Configured, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @OUTPUT_USB, align 4
  store i32 %6, i32* %1, align 4
  br label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @OUTPUT_NONE, align 4
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %7, %5
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
